# curvesandSurfacesGL

./: .gitmodules  CMakeLists.txt  README.md  animator.h  bezier1.cpp  camera.h  main.cpp  main_old.cpp  mesh.h  model.h  primitives.h  shell.nix  some_extension_ideas.txt  surface.off
bezier/: CMakeLists.txt  bezier1.h  main.cpp
models/: scene.blend  scene.blend1  scene.off
scene/: CMakeLists.txt  camera.h  main.cpp  mesh.h  model.h  shader.h
scene/models/: cube.off  scene.blend  scene.off
scene/shaders/: shader.frag  shader.vert
shaders/: shader.vert
